# Open-Source-Pirate

./: .gitignore  .tmuxp.yaml  README.md  config.py  pyproject.toml  requirements.txt  run.py
app/: __init__.py  models.py  routes.py  utils.py
app/admin/: __init__.py  forms.py  routes.py
app/admin/templates/: dashboard.jinja  edit.jinja  login.jinja  new.jinja
app/main/: routes.py
app/main/templates/: article.jinja  base.jinja  index.jinja
app/static/: data.json
app/static/css/: style.css
app/static/js/: app.js
app/static/scss/: _article.scss  _footer.scss  _header.scss  _index.scss  _project.scss  app.scss  style.scss
app/templates/: about.html  base.html  index.html
app/templates/components/: _article.html  _footer.html  _header.html  _project.html
